VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc12Up.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [16MB/455.1MB][  3%][=>                                                ][5.333MB/s]  [80MB/455.1MB][ 17%][========>                                         ][20MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][28.8MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][33.33MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][37.71MB/s]  [328MB/455.1MB][ 72%][====================================>             ][41MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][42.67MB/s]  [448MB/455.1MB][ 98%][=================================================>][44.8MB/s]  [455.1MB/455.1MB][100%][==================================================][45.51MB/s]  [455.1MB/455.1MB][100%][==================================================][45.51MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_59895/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_59895/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
